--- a/CustomVision-RescoAPI/index.html
+++ b/CustomVision-RescoAPI/index.html
@@ -9,7 +9,7 @@
 	<meta http-equiv="Cache-Control" content="no-store" />
 	<link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="http://pingendo.github.io/pingendo-bootstrap/themes/default/bootstrap.css" rel="stylesheet" type="text/css">
-	<script src="../JSBridge.js"></script>
+	<script src="JSBridge.js"></script>
 	<script src="jquery-3.2.1.min.js"></script>
 	<script src="index.js" type="text/javascript"></script>
 </head>
