--- a/CustomVision-RescoAPI/index.html
+++ b/CustomVision-RescoAPI/index.html
@@ -15,6 +15,8 @@
 	<script src="jquery-3.2.1.min.js"></script>
 	<script src="index.js" type="text/javascript"></script>
 	<link rel="stylesheet" type="text/css" href="listview.css">
+	<link rel="stylesheet" type="text/css" href="button.css">
+	
 
 </head>
 
@@ -26,10 +28,15 @@
 		<div class="section">
 			<button class="btn btn-lg btn-primary" id="myButton" onclick="onTakePhoto()">Make a photo!</button>
 		</div>
+
+		
 		<div class="img-responsive">
 			<img id="imageplaceholder" class="img-responsive"></img>
 		</div>
 
+		<div class="buttons">
+		<button class="fill">Fill In</button>
+	</div>
 		<div class="section" style="display:none" id="PostRecognitionActions">
 			<ul id="RecognitionResult" class="btn btn-lg"> </ul>
 			<button class="btn btn-lg btn-primary" id="showRelevantInfo" onclick="onShowRelevantInfo()">Show Relevant Information</button>
