--- a/CustomVision-RescoAPI/index.html
+++ b/CustomVision-RescoAPI/index.html
@@ -13,6 +13,7 @@
 
 	<script src="JSBridge.js"></script>
 	<script src="jquery-3.2.1.min.js"></script>
+	<script src="spinner.js" type="text/javascript"></script>
 	<script src="index.js" type="text/javascript"></script>
 	<link rel="stylesheet" type="text/css" href="listview.css">
 	
@@ -25,8 +26,8 @@
 			<img class="img-responsive" src="logo.jpg"></img>
 		</div>
 		<div class="section">
-			<button class="btn btn-lg btn-primary" id="myButton" onclick="onTakePhoto()">Make a photo!</button>
-			
+			<button class="btn btn-lg btn-primary" id="myButton" onclick="onTakePhoto()" style="background: url(buttonimage.png) no-repeat 15% 50% #FF8800">              </button>
+
 		</div>
 
 		
@@ -34,7 +35,8 @@
 			<img id="imageplaceholder" class="img-responsive"></img>
 		</div>
 
-		
+		<div id="RecognitionSpinner"></div>
+
 		<div class="section" style="display:none" id="PostRecognitionActions">
 			<ul id="RecognitionResult" class="btn btn-lg"> </ul>
 			<button class="btn btn-lg btn-primary" id="showRelevantInfo" onclick="onShowRelevantInfo()">Show Relevant Information</button>
