--- a/CustomVision-RescoAPI/index.html
+++ b/CustomVision-RescoAPI/index.html
@@ -26,7 +26,7 @@
 			<img class="img-responsive" src="logo.jpg"></img>
 		</div>
 		<div class="section">
-			<button class="btn btn-lg btn-primary" id="myButton" onclick="onTakePhoto()" style="background: url(buttonimage.png) no-repeat 15% 50% #FF8800">              </button>
+			<button class="btn btn-lg btn-primary" id="myButton" onclick="onTakePhoto()"><img src="buttonimage.png"></img></button>
 
 		</div>
 
